--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,10 +28,10 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.appcompat:appcompat:1.5.0'
+    implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'org.projectlombok:lombok:1.18.22'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
     annotationProcessor 'org.projectlombok:lombok:1.18.24'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
