--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,12 +20,16 @@
             android:theme="@style/Theme.Class08project"
             tools:targetApi="31">
         <activity
-                android:name=".RecyclerFruitActivity"
+                android:name=".DataActivity"
                 android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+        </activity>
+        <activity
+                android:name=".RecyclerFruitActivity"
+                android:exported="true">
         </activity>
         <activity
                 android:name=".FruitActivity"
